--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,17 @@
-streamlit
-pandas
-numpy
-scikit-learn
-matplotlib
+streamlit>=1.28.0
+pandas>=2.0.0
+numpy>=1.23.0
+scikit-learn>=1.3.0
+matplotlib>=3.7.0
+seaborn>=0.12.0
+plotly>=5.13.0
+shap>=0.42.0
+reportlab>=4.0.0
+jinja2>=3.1.0
+python-dateutil>=2.8.0
+sqlalchemy>=2.0.0
+psycopg2-binary>=2.9.0
+requests>=2.31.0
+pydantic>=2.0.0
+cryptography>=41.0.0
+python-dotenv>=1.0.0
