--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit
-pandas
-numpy
-scikit-learn
-matplotlib
+streamlit==1.54.0
+pandas==3.0.0
+numpy==2.4.2
+scikit-learn==1.8.0
+matplotlib==3.10.7
+plotly==6.5.2
