--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.54.0
-pandas==3.0.0
-numpy==2.4.2
-scikit-learn==1.8.0
-matplotlib==3.10.7
-plotly==6.5.2
+streamlit>=1.32,<2.0
+pandas>=2.1,<3.0
+numpy>=1.26,<3.0
+scikit-learn>=1.4,<2.0
+matplotlib>=3.8,<4.0
+plotly>=5.18,<7.0
